# tekken-mesh-viewer

./: CMakeLists.txt
include/: camera.hpp  model.hpp  pskreader.hpp  shader.hpp
shaders/: mesh.frag  mesh.vert
src/: camera.cpp  main.cpp  model.cpp  pskreader.cpp  shader.cpp
src/Common/: settings.hpp  util.hpp
src/Engine/: camera.cpp  camera.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
src/Engine/UAM/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  types.hpp
src/UAM/: textures.cpp  textures.hpp  uam.cpp  uam.hpp
